force-app/main/default/objects/ServiceAppointment/fields/FSL_FTFR_Count__c.field-meta.xml
<CustomField>
    <fullName>FSL_FTFR_Count__c</fullName>
    <description>Sets the value of the field to 0 if status is &apos;Cannot Complete&apos;. This field is used in Service Manager report to calculate First Time Fix Rate value</description>
    <formula>IF(ISPICKVAL(Status,&apos;Cannot Complete&apos;),0,100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FTFR Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>