force-app/main/default/objects/ServiceAppointment/fields/FSSK__FSK_Assigned_Service_Resource__c.field-meta.xml
<CustomField>
    <fullName>FSSK__FSK_Assigned_Service_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the assign resource relates to the Service Appointment</description>
    <label>Assigned Service Resource</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>