force-app/main/default/objects/ServiceAppointment/fields/Rider_ContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>Rider_ContactFirstName__c</fullName>
    <description>A reference to the Contact&apos;s First Name</description>
    <formula>Contact.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>A reference to the Contact&apos;s First Name</inlineHelpText>
    <label>Rider Contact FirstName</label>
    <type>Text</type>
</CustomField>