force-app/main/default/objects/ServiceAppointment/fields/SchEndDateFormatted__c.field-meta.xml
<CustomField>
    <fullName>SchEndDateFormatted__c</fullName>
    <description>Einstein Chatbot formatted field</description>
    <formula>CASE(MONTH(DATEVALUE( SchedEndTime )), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 

&amp; &apos; &apos; &amp; 

TEXT(Day(DATEVALUE(SchedEndTime))) 

&amp; &apos;, &apos; &amp; 

TEXT(Year(DATEVALUE(SchedEndTime)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SchEndDateFormatted</label>
    <type>Text</type>
</CustomField>