force-app/main/default/objects/ServiceAppointment/fields/SchStartTimeFormatted__c.field-meta.xml
<CustomField>
    <fullName>SchStartTimeFormatted__c</fullName>
    <description>Einstein Chatbot formatted field</description>
    <formula>TEXT(IF( OR( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 0, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) = 12 ), 12, VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) - IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, 0, 12 ) )) 

&amp; &apos;:&apos; &amp; 
Right(&apos;0&apos; &amp; TEXT(VALUE( MID( TEXT( SchedStartTime - (8/24) ), 15, 2 ) )), 2) 

&amp; &apos; &apos; &amp; 
IF( VALUE( MID( TEXT( SchedStartTime - (8/24) ), 12, 2 ) ) &lt; 12, &quot;AM&quot;, &quot;PM&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SchStartTimeFormatted</label>
    <type>Text</type>
</CustomField>