force-app/main/default/objects/ServiceAppointment/listViews/My_ServiceAppointments.listView-meta.xml
<ListView>
    <fullName>My_ServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>ParentRecord</columns>
    <columns>ParentRecordType</columns>
    <columns>Status</columns>
    <columns>ArrivalWindowStartTime</columns>
    <columns>ArrivalWindowEndTime</columns>
    <filterScope>Mine</filterScope>
    <label>My Service Appointments</label>
    <language>en_US</language>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
        <allInternalUsers></allInternalUsers>
        <allPartnerUsers></allPartnerUsers>
    </sharedTo>
</ListView>