force-app/main/default/objects/ServiceAppointment/listViews/SchedulingConsoleServiceAppointments.listView-meta.xml
<ListView>
    <fullName>SchedulingConsoleServiceAppointments</fullName>
    <columns>Name</columns>
    <columns>Status</columns>
    <columns>SchedStartTime</columns>
    <columns>SchedEndTime</columns>
    <columns>ServiceTerritory</columns>
    <columns>WorkType</columns>
    <columns>Account</columns>
    <columns>LatestEndTime</columns>
    <columns>ParentRecord</columns>
    <filterScope>Mine</filterScope>
    <label>Scheduling Console Service Appointments</label>
</ListView>